styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  * {
    scrollbar-width: none;
    
  }
  .paytone {
    font-family: 'Paytone One', sans;
  }
  .text-border {
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: #FEE3EC;
  }
  .bg-gr {
    background: linear-gradient(to right, #222222 100%, #FEE3EC 100%);
  }
  .text-gr {
    background: #222222;
    background-image: linear-gradient(to right, #222222 0%, #FEE3EC 0%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 1px #222222;
  }
  
}

